---
id: changelog
title: Details
---

All notable changes to this project will be documented in this file.

## security

### 2021-02-09 v0.0.75
Added
- Add /api/keycloak/add-group endpoint
- Add /api/keycloak/remove-group endpoint
- Add /api/keycloak/add-user-to-group endpoint

### 2021-02-05 v0.0.74
Added
- Add @tshio/logger

### 2021-02-04 v0.0.73
Added
- Update dependencies

### 2020-12-17 v0.0.69
Added
- Fix url encode

### 2020-12-16 v0.0.68
Added
- Fix /api/users/add-user endpoint

### 2020-12-03 v0.0.67
Added
- Add /api/public/me endpoint

### 2020-12-03 v0.0.66
Added
- Fix verify keycloak oauth token

### 2020-11-30 v0.0.65
Added
- BadRequest response format changed. Now is the full joi error https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/hapi__joi/index.d.ts#L635

### 2020-10-26 v0.0.64
Added
- Keycloak/OpenID auth provider

### 2020-09-09 v0.0.63
Bugfix
- Fix keycloak-manager (wrong configuration names)

### 2020-08-27 v0.0.62
Bugfix
- Set default config when keycloak.json doesn't exist.

### 2020-08-18 v0.0.61
Refactor
- has-attribute endpoint: the name of `has-attribute` endpoint changed to `has-attributes` and the request method to POST. Parameters moved from query to body.
- has-access endpoint: request method has changed to POST, parameters moved from query to body.

### 2020-08-17 v0.0.60
Added
- Attributes operations moved to DB for speed improvement

### 2020-07-30 v0.0.59
Added
- Notification callback after changes in policies / users / attributes

### 2020-07-07 v0.0.58
Added
- Keycloak authentication strategy

### 2020-06-25 v0.0.57
Changed
- Add TOKEN_PAYLOAD_DISABLE_ATTRIBUTES and TOKEN_PAYLOAD_DISABLE_RESOURCES environment variables config.

### 2020-05-19 v0.0.56
Changed
- Super access with x-access-key header (it will be equal to request done by superadmin)
- Add login with google id_token (/api/public/auth/login/google-id-token endpoint)

### 2020-05-12 v0.0.55
Changed
- Fixed missing responses for services
